--- a/chamber/styles/normalize.css
+++ b/chamber/styles/normalize.css
@@ -4,3 +4,20 @@
     border: none;
     padding: 0;
 }
+
+h1 {
+    font-size: 32px;
+}
+
+h2 {
+    font-size: 24px;
+}
+
+h3 {
+    font-size: 20px;
+}
+
+a,
+p {
+    font-size: 16px;
+}
