--- a/chamber/styles/base-large.css
+++ b/chamber/styles/base-large.css
@@ -1,3 +1,7 @@
 @media screen and (min-width: 512px) {
     
+    footer {
+        display: flex;
+        justify-content: space-around;
+    }
 }
