--- a/chamber/styles/base-small.css
+++ b/chamber/styles/base-small.css
@@ -18,6 +18,11 @@ header {
     background-color: var(--dark-background);
 }
 
+header img {
+    max-width: 44px;
+    height: auto;
+}
+
 header h2 {
     max-width: 240px;
     text-align: center;
