--- a/chamber/styles/base-small.css
+++ b/chamber/styles/base-small.css
@@ -16,6 +16,7 @@ header {
     border-bottom: 1px solid var(--extra-dark);
     padding: 1rem;
     background-color: var(--dark-background);
+    z-index: 1;
 }
 
 header img {
@@ -77,7 +78,7 @@ a.here:hover {
 }
 
 main {
-    padding: 1em;
+    padding-bottom: 1rem;
     background-color: var(--light-background);
 }
 
