--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -38,6 +38,7 @@ h1 {
 }
 
 main h2 {
+    max-height: 2.75rem;
     border-bottom: 1px solid var(--extra-dark);
     padding: .5rem 1rem;
     background-color: var(--dark-background);
@@ -47,11 +48,29 @@ main h2 {
     margin: 1rem;
 }
 
-#events {}
+#weather {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 1rem;
+}
 
-#weather {}
+#weather h2 {
+    grid-column: 1/3;
+}
 
-#forecast {}
+#weather img {
+    width: auto;
+    max-height: 7rem;
+    margin: 1rem 0 1rem 1rem;
+}
+
+#weather div {
+    border: none;
+}
+
+#weather p {
+    margin: 1rem 1rem 1rem 0;
+}
 
 #spotlight {
     display: grid;
