--- a/chamber/styles/normalize.css
+++ b/chamber/styles/normalize.css
@@ -3,17 +3,17 @@
     margin: 0;
     border: none;
     padding: 0;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 h1 {
-    font-size: 32px;
+    font-size: 2rem;
 }
 
 h2 {
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 h3 {
-    font-size: 20px;
+    font-size: 1.25rem;
 }
