--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -38,6 +38,7 @@ form p {
 
 label {
     margin: .5rem;
+    max-width: 18rem;
 }
 
 label:has(> input[required])::before {
@@ -153,6 +154,10 @@ select:hover,
 
     h1 {
         grid-column: 1/3;
+    }
+
+    label {
+        max-width: 32rem;
     }
 
     form p,
