--- a/final/styles/home.css
+++ b/final/styles/home.css
@@ -3,6 +3,148 @@
 }
 
 #hero img {
-    max-width: 100%;
-    margin-top: -1rem;
+    width: 100%;
+    height: auto;
+    max-width: 1920px;
+    margin: -1rem 0 0;
+}
+
+#deck {
+    display: grid;
+    grid-template-areas: 
+    "welcome"
+    "feature"
+    "signup";
+    row-gap: 1rem;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 1rem;
+    background-color: var(--text-window);
+    padding: 1rem;
+}
+
+label {
+    display: block;
+    width: 100%;
+    max-width: 24rem;
+    margin-bottom: 1rem;
+}
+
+input {
+    display: block;
+    width: 100%;
+    height: 3rem;
+    border: 1px solid var(--text-color);
+    border-radius: 1rem;
+    background-color: var(--purple-accent);
+    padding: 1rem;
+    color: var(--text-window);
+}
+
+button[type="submit"] {
+    width: 50%;
+    max-width: 12rem;
+    margin-top: 1rem;
+    border: 1px solid var(--text-color);
+    border-radius: 1rem;
+    background-color: var(--cool-accent);
+    padding: 1rem;
+    color: var(--text-window);
+}
+
+button[type="submit"]:hover {
+    background-color: var(--warm-accent);
+}
+
+#welcome {
+    grid-area: welcome;
+}
+
+#signup {
+    grid-area: signup;
+}
+
+#feature {
+    grid-area: feature;
+}
+
+#spotlight {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    row-gap: 1rem;
+    column-gap: 1rem;
+}
+
+.game {
+    display: grid;
+    grid-template-areas:
+    "art"
+    "title"
+    "pub"
+    "next";
+    border-radius: 1rem;
+    background-color: var(--text-window);
+    padding: 1rem;
+    text-align: center;
+}
+
+.game img {
+    grid-area: art;
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    margin: auto;
+    border-radius: 1rem;
+}
+
+.game h3 {
+    grid-area: title;
+    margin-top: 1rem;
+    color: var(--cool-accent);
+}
+
+.game .pub {
+    grid-area: pub;
+}
+
+.game .next {
+    grid-area: next;
+}
+
+@media screen and (min-width: 1025px) {
+
+    #deck {
+        grid-template-columns: 3fr 2fr;
+        grid-template-areas:
+        "welcome feature"
+        "signup feature";
+        column-gap: 1rem;
+    }
+
+    #spotlight {
+        grid-template-columns: 1fr;
+    }
+
+    .game {
+        grid-template-areas:
+        "title art"
+        "pub art"
+        "next art";
+        grid-template-columns: 2fr 1fr;
+        grid-template-rows: 2fr 1fr 1fr;
+        column-gap: 1rem;
+    }
+
+    .game img {
+        width: 180px;
+    }
+
+    .game h3,
+    .game p {
+        margin: auto 0;
+    }
 }
