--- a/final/styles/sources.css
+++ b/final/styles/sources.css
@@ -22,9 +22,13 @@
 #deck img {
     width: 100%;
     max-width: 300px;
-    height: auto;
+    aspect-ratio: 1 / 1;
     margin: auto;
     border-radius: 1rem;
+}
+
+#deck img.wide {
+    aspect-ratio: 512 / 288;
 }
 
 #deck p,
