--- a/final/styles/base-small.css
+++ b/final/styles/base-small.css
@@ -1,4 +1,5 @@
 * {
+    border-radius: 1rem;
     font-family: 'Audiowide', sans-serif;
     color: var(--text-color);
 }
@@ -17,10 +18,13 @@ h1 {
 }
 
 h2 {
-    border-radius: 1rem;
     background-color: var(--text-window);
     padding: 1rem;
     color: var(--warm-accent);
+}
+
+h3 {
+    color: var(--cool-accent);
 }
 
 a {
@@ -39,6 +43,7 @@ a.here:visited:hover {
 }
 
 body {
+    border-radius: 0;
     background-color: var(--backg-color);
 }
 
@@ -55,7 +60,6 @@ header {
 header h2 {
     width: fit-content;
     max-width: 70%;
-    border-radius: 1rem;
     background-color: var(--text-window);
     padding: 1rem;
 }
@@ -101,7 +105,6 @@ nav.open {
 
 nav a {
     margin: 1rem auto;
-    border-radius: 1rem;
     background-color: var(--text-window);
     padding: .5rem 1rem;
     text-decoration: none;
@@ -118,6 +121,7 @@ nav a.here:visited {
 
 main {
     position: relative;
+    border-radius: 0;
     padding: 1rem;
 }
 
@@ -128,7 +132,6 @@ main {
     width: 2rem;
     height: 2rem;
     border: 1px solid var(--backg-color);
-    border-radius: 1rem;
     background-color: var(--text-color);
     font-size: 1.5rem;
     font-weight: 900;
@@ -141,7 +144,6 @@ main {
 
 .card {
     border: 1px solid var(--text-color);
-    border-radius: 1rem;
     background-color: var(--foreg-color);
     padding: 1rem;
 }
@@ -152,9 +154,49 @@ main {
 }
 
 .card > p {
-    border-radius: 1rem;
     background-color: var(--text-window);
     padding: 1rem;
+}
+
+.game {
+    display: grid;
+    background-color: var(--text-window);
+    padding: 1rem;
+}
+
+.game img {
+    width: 100%;
+    max-width: 300px;
+    aspect-ratio: 1 / 1;
+}
+
+.game h3 {
+    margin-top: 1rem;
+}
+
+label {
+    display: block;
+    width: 100%;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+select,
+textarea {
+    display: block;
+    width: 100%;
+    border: 1px solid var(--text-color);
+    background-color: var(--purple-accent);
+    padding: 1rem;
+    color: var(--text-window);
+}
+
+form button {
+    border: 1px solid var(--text-color);
+    background-color: var(--cool-accent);
+    padding: 1rem;
+    color: var(--text-window);
 }
 
 footer {
@@ -169,7 +211,6 @@ footer {
 footer div {
     width: fit-content;
     margin: 1rem;
-    border-radius: 1rem;
     background-color: var(--text-window);
     padding: 1rem;
 }
@@ -177,4 +218,5 @@ footer div {
 footer img {
     width: 3rem;
     aspect-ratio: 1 / 1;
+    border-radius: 0;
 }
