--- a/final/styles/home.css
+++ b/final/styles/home.css
@@ -7,6 +7,7 @@
     max-width: 1920px;
     aspect-ratio: 512 / 288;
     margin: -1rem 0 0;
+    border-radius: 0;
 }
 
 #deck {
@@ -22,38 +23,19 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 1rem;
     background-color: var(--text-window);
     padding: 1rem;
 }
 
 label {
-    display: block;
-    width: 100%;
     max-width: 24rem;
     margin-bottom: 1rem;
-}
-
-input {
-    display: block;
-    width: 100%;
-    height: 3rem;
-    border: 1px solid var(--text-color);
-    border-radius: 1rem;
-    background-color: var(--purple-accent);
-    padding: 1rem;
-    color: var(--text-window);
 }
 
 button[type="submit"] {
     width: 50%;
     max-width: 12rem;
     margin-top: 1rem;
-    border: 1px solid var(--text-color);
-    border-radius: 1rem;
-    background-color: var(--cool-accent);
-    padding: 1rem;
-    color: var(--text-window);
 }
 
 button[type="submit"]:hover {
@@ -80,31 +62,21 @@ button[type="submit"]:hover {
 }
 
 .game {
-    display: grid;
     grid-template-areas:
     "art"
     "title"
     "pub"
     "next";
-    border-radius: 1rem;
-    background-color: var(--text-window);
-    padding: 1rem;
     text-align: center;
 }
 
 .game img {
     grid-area: art;
-    width: 100%;
-    max-width: 300px;
-    aspect-ratio: 1 / 1;
     margin: auto;
-    border-radius: 1rem;
 }
 
 .game h3 {
     grid-area: title;
-    margin-top: 1rem;
-    color: var(--cool-accent);
 }
 
 .game .pub {
