--- a/final/styles/signup.css
+++ b/final/styles/signup.css
@@ -14,14 +14,11 @@ fieldset {
     flex-direction: column;
     justify-content: center;
     margin-top: 1rem;
-    border-radius: 1rem;
     background-color: var(--text-window);
     padding: 1rem 1rem 0;
 }
 
 label {
-    display: block;
-    width: 100%;
     max-width: 32rem;
     margin: 0 auto 1rem;
 }
@@ -31,14 +28,7 @@ input[type="email"],
 input[type="tel"],
 select,
 textarea {
-    display: block;
-    width: 100%;
     margin: 0 auto;
-    border: 1px solid var(--text-color);
-    border-radius: 1rem;
-    background-color: var(--purple-accent);
-    padding: 1rem;
-    color: var(--text-window);
 }
 
 textarea {
@@ -64,11 +54,6 @@ fieldset button {
     width: 50%;
     max-width: 16rem;
     margin: 0 auto 1rem;
-    border: 1px solid var(--text-color);
-    border-radius: 1rem;
-    background-color: var(--cool-accent);
-    padding: 1rem;
-    color: var(--text-window);
 }
 
 button:hover {
@@ -106,7 +91,6 @@ dialog {
     max-width: 42rem;
     margin: auto;
     border: 1px solid var(--text-color);
-    border-radius: 1rem;
     background-color: var(--foreg-color);
     padding: 1rem;
 }
@@ -121,6 +105,7 @@ dialog p:first-of-type {
 }
 
 dialog p {
+    border-radius: 0;
     background-color: var(--text-window);
     padding: 0 1rem;
     text-align: center;
@@ -134,10 +119,8 @@ dialog p:last-of-type {
 
 dialog h3 {
     margin-bottom: 1rem;
-    border-radius: 1rem;
     background-color: var(--text-window);
     padding: 1rem;
-    color: var(--cool-accent);
     text-align: center;
 }
 
