--- a/final/styles/signup.css
+++ b/final/styles/signup.css
@@ -134,3 +134,37 @@ dialog button {
     width: 100%;
     margin-bottom: 0;
 }
+
+#upcoming {
+    margin-top: 1rem;
+}
+
+.game {
+    display: block;
+    margin-top: 1rem;
+    text-align: center;
+}
+
+.game img {
+    display: block;
+    max-width: 180px;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 1025px) {
+
+    main {
+        display: grid;
+        grid-template-columns: 3fr 2fr;
+        column-gap: 1rem;
+    }
+
+    h1 {
+        grid-column: 1 / 3;
+    }
+
+    #upcoming {
+        height: fit-content;
+        margin: auto auto auto 0;
+    }
+}
